# kata_babysteps

./: .gitignore  Especificação Kata-Lang v2.md  KATA_SPECIFICATION.md  Kata-Lang Philosophy.md  Kata-Lang Rev1.4.md  Kata-Lang Rev3.md  Kata-Lang.md  KataLang Spec Draft 11.md  PRD_PHASE_1.md  PRD_PHASE_10.md  PRD_PHASE_2.md  PRD_PHASE_3.md  PRD_PHASE_4.md  PRD_PHASE_5.md  PRD_PHASE_6.md  PRD_PHASE_7.md  PRD_PHASE_8.md  PRD_PHASE_9.md
kata-cli/: Cargo.toml  README.md  compile_out.txt  compile_out2.txt  output.txt
kata-cli/docs/: AST-Span-Refactor-PRD.md  Generics-PRD.md  Kata-lang Specs Draft.md  MissingFeatures-PRD.md  RefinedTypes-PRD.md  TypeChecker-PRD.md
kata-cli/examples/: mock_math.kata  test_array.kata  test_coercion.kata  test_comment.kata  test_debug.kata  test_fatorial.kata  test_fibonacci.kata  test_fizzbuzz.kata  test_fizzbuzz_list.kata  test_float_simple.kata  test_imc.kata  test_imports.kata  test_indent.kata  test_indexing.kata  test_is_prime.kata  test_leading_nl.kata  test_main.kata  test_maxmin.kata  test_nested_patterns.kata  test_pattern_simple.kata  test_phase10.kata  test_phase8_stdlib.kata  test_phase9.kata  test_purity.kata  test_quicksort.kata  test_range_simple.kata  test_range_step.kata  test_refined.kata  test_simple.kata  test_tco_simple.kata  test_tensor_boundary.kata  test_tensor_math.kata  test_trig.kata  test_zip.kata  test_zip_debug.kata  test_zip_simple.kata  test_zip_simpler.kata
kata-cli/src/: ast.rs  error.rs  ir.rs  jit.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  type_checker.rs  typed_ast.rs
kata-runtime/: Cargo.toml
(+99 files in other folders)
