[package]
name = "kata"
version = "0.1.0"
edition = "2021"
authors = ["Kata Lang Contributors"]
description = "A CLI and REPL for the Kata Language"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rustyline = "13.0"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0"
chumsky = "0.9"
rustyline-derive = "0.11.1"
id-arena = "2.3.0"
cranelift-jit = "0.103.0"
cranelift-module = "0.103.0"
cranelift-native = "0.103.0"
cranelift-codegen = "0.103.0"
cranelift-frontend = "0.103.0"
cranelift-object = "0.103.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
